Created new component

--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,5 +1,4 @@
-<h1>Oi</h1>
-{{#todo-list}}
-texto
+<!--tela  em branco onde criamos nossa aplicação-->
+{{#todo-list}} <!-- Aqui é um componente em bloco-->
+  {{todo-task}} <!--Aqui é individual -->
 {{/todo-list}}
-<p>Fim</p>
